--- a/package.json
+++ b/package.json
@@ -16,12 +16,21 @@
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "json-loader": "^0.5.7",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.6",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1"
   },
   "dependencies": {
     "angular-ui-router": "^0.4.3",
     "angularjs": "0.0.1",
+    "bootstrap": "^3.3.7",
+    "css-loader": "^0.28.7",
+    "file-loader": "^1.1.5",
+    "jquery": "^3.2.1",
+    "popper": "^1.0.0",
+    "style-loader": "^0.19.0",
+    "url-loader": "^0.6.2",
     "webpack": "^3.6.0"
   }
 }
