--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "json-loader": "^0.5.7",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
@@ -28,9 +31,8 @@
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.5",
     "jquery": "^3.2.1",
-    "popper": "^1.0.0",
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
-    "webpack": "^3.6.0"
+    "webpack": "^3.8.1"
   }
 }
